--- a/nginx.conf
+++ b/nginx.conf
@@ -22,7 +22,7 @@ http {
         listen       80;
 	server_name localhost;
 	index index.html index.php;
-	root /html/machine_cv/web;
+	root html/machine_cv/web;
 	location ~\.php$ {
 		 fastcgi_pass 127.0.0.1:9000;
 		 root html/machine_cv/web;
